Made CRUD for acheivements and badges entities "update and delete for acheivements are not working yet"
